Site address changed

--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "locals": {
-    "url": "http://otarola.me",
+    "url": "http://blog.otarola.me",
     "name": "Interdimensional blog",
     "owner": "Andrés Otárola",
     "description": "from a wanderer traveler"
